fix select box styling on Safari

--- a/client/src/styles/index.css
+++ b/client/src/styles/index.css
@@ -8,3 +8,7 @@ body {
     margin: 0;
     background-color: #F9F9F9;
 }
+
+.select {
+    border-radius: none !important;
+}
